--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -28,3 +28,62 @@
         {% else %}
             {% set value = "" %}
         {% endif %}
+
+        {% if field.field_type == "input" %} 
+
+            <div class="input-field col s12 m6">
+                <input type="{{ field.input_type }}" class="validate" name="{{ field.field_name }}" id="{{ field.field_name }}" value="{{ value }}" required>
+                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+            </div>
+
+        {% elif field.field_type == "date" %}
+
+            <div class="input-field col s12 m6">
+                <input type="text" class="datepicker validate" name="{{ field.field_name }}" id="{{ field.field_name }}" value="{{ value }}" required>
+                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+            </div>
+
+        {% elif field.field_type == "multiselect" %}
+
+            <div class="input-field col s12 m6">
+                <select multiple name="{{ field.field_name }}" id="{{ field.field_name }}" required>
+                    
+                    {% for option in field.options %} 
+
+                        {% if value is iterable and (value is not string and value is not mapping) %}
+                            {% if option in value %} 
+                                {% set sel = "selected" %} 
+                            {% else %} 
+                                {% set sel = "" %}
+                            {% endif %}
+                        {% else %} 
+                            {% set sel = "" %} 
+                        {% endif %}
+
+                        <option value="{{ option }}" {{ sel }}>{{ option }}</option>
+                    {% endfor %}
+                </select>
+                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+            </div>
+        
+        {% elif field.field_type == "select" %}
+
+            <div class="input-field col s12 m6">
+                <select name="{{ field.field_name }}" id="{{ field.field_name }}" required>
+                    {% for option in field.options %} 
+                        {% if option == value %}
+                            {% set sel = "selected" %} 
+                        {% else %} 
+                            {% set sel = "" %} 
+                        {% endif %} 
+
+                        <option value="{{ option }}" {{ sel }}>{{ option }}</option>
+                    {% endfor %}
+                </select>
+                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+            </div>
+
+        {% endif %}
+
+    {% endfor %}
+{% endmacro %}
