feat: add import of macros from macros.j2 file

--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} 
+{% import "macros.j2" as macros %}
 {% block content %} 
 
     <h3 class="center-align">Create Product <i class="material-icons">control_point</i></h3>
