--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -19,39 +19,8 @@
                 </div>
             </div><hr><br>
             <div class="row">
-                {# we build the form fields dynamically from the field_list dictionary
-                    we only want the commercial details inputs for this form #}
-                {% for field in field_list.commercial_details %}
-                    {# we check the field_type attribute and create an input depending on what type it is #}
-                    {% if field.field_type == "input" %} 
 
-                        <div class="input-field col s12 m6">
-                            <input type="{{ field.input_type }}" class="validate" name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                        </div>
-
-                    {% elif field.field_type == "date" %}
-
-                        <div class="input-field col s12 m6">
-                            <input type="text" class="datepicker validate" name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                        </div>
-
-                    {% elif field.field_type == "multiselect" %}
-
-                        <div class="input-field col s12 m6">
-                            <select multiple name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                                {# if it's a multiselect/select we build the options from the options array #}
-                                {% for option in field.options %} 
-                                    <option value="{{ option }}">{{ option }}</option>
-                                {% endfor %}
-                            </select>
-                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                        </div>
-
-                    {% endif %}
-
-                {% endfor %}
+                {{ macros.form_builder(field_list.commercial_details) }}
 
             </div>
             <div class="row">
