--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
+{% import "macros.j2" as macros %} 
 {% block content %} 
 
     <h3 class="center-align">Add Product <strong><i>{{ session.role }}</i></strong> Details</h3>
