--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -38,77 +38,9 @@
 
             <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
                 <div class="row">
-                    {% for field in field_list[(session.role.lower())+"_details"] %}
-                        {# build form elements from field_list #}
-                        {% if product %}
-                            {# check if the product object already has an attribute for the field and if it does, 
-                                set it as the value for the element #}
-                            {% if field.field_name in product %}
-                                {% set value = product[field.field_name] %}
-                            {% else %} 
-                                {% set value = "" %} 
-                            {% endif %}
-                        {% else %} 
-                            {% set value = "" %}
-                        {% endif %}
+                    
+                    {{ macros.form_builder(field_list[(session.role.lower())+"_details"], product) }}
 
-                        {% if field.field_type == "input" %} 
-        
-                            <div class="input-field col s12 m6">
-                                <input type="{{ field.input_type }}" class="validate" name="{{ field.field_name }}" id="{{ field.field_name }}" value="{{ value }}" required>
-                                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                            </div>
-        
-                        {% elif field.field_type == "date" %}
-        
-                            <div class="input-field col s12 m6">
-                                <input type="text" class="datepicker validate" name="{{ field.field_name }}" id="{{ field.field_name }}" value="{{ value }}" required>
-                                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                            </div>
-        
-                        {% elif field.field_type == "multiselect" %}
-        
-                            <div class="input-field col s12 m6">
-                                <select multiple name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                                    
-                                    {% for option in field.options %} 
-        
-                                        {% if value is iterable and (value is not string and value is not mapping) %}
-                                            {% if option in value %} 
-                                                {% set sel = "selected" %} 
-                                            {% else %} 
-                                                {% set sel = "" %}
-                                            {% endif %}
-                                        {% else %} 
-                                            {% set sel = "" %} 
-                                        {% endif %}
-        
-                                        <option value="{{ option }}" {{ sel }}>{{ option }}</option>
-                                    {% endfor %}
-                                </select>
-                                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                            </div>
-                        
-                        {% elif field.field_type == "select" %}
-        
-                            <div class="input-field col s12 m6">
-                                <select name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                                    {% for option in field.options %} 
-                                        {% if option == value %}
-                                            {% set sel = "selected" %} 
-                                        {% else %} 
-                                            {% set sel = "" %} 
-                                        {% endif %} 
-        
-                                        <option value="{{ option }}" {{ sel }}>{{ option }}</option>
-                                    {% endfor %}
-                                </select>
-                                <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                            </div>
-        
-                        {% endif %}
-        
-                    {% endfor %}
                 </div>
                 <!-- submit button -->
                 <div class="row">
