--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -135,50 +135,10 @@
                             <input type="text" class="datepicker validate" name="{{ field.field_name }}" id="{{ field.field_name }}" required>
                             <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
                         </div>
-
-                    {% elif field.field_type == "multiselect" %}
-
-                        <div class="input-field col s12 m6">
-                            <select multiple name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                                
-                                {% for option in field.options %} 
-
-                                    {% if value is iterable and (value is not string and value is not mapping) %}
-                                        {% if option in value %} 
-                                            {% set sel = "selected" %} 
-                                        {% else %} 
-                                            {% set sel = "" %}
-                                        {% endif %}
-                                    {% else %} 
-                                        {% set sel = "" %} 
-                                    {% endif %}
-
-                                    <option value="{{ option }}" {{ sel }}>{{ option }}</option>
-                                {% endfor %}
-                            </select>
-                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                        </div>
-                    
-                    {% elif field.field_type == "select" %}
-
-                        <div class="input-field col s12 m6">
-                            <select name="{{ field.field_name }}" id="{{ field.field_name }}" required>
-                                {% for option in field.options %} 
-                                    {% if option == value %}
-                                        {% set sel = "selected" %} 
-                                    {% else %} 
-                                        {% set sel = "" %} 
-                                    {% endif %} 
-
-                                    <option value="{{ option }}" {{ sel }}>{{ option }}</option>
-                                {% endfor %}
-                            </select>
-                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
-                        </div>
-
-                    {% endif %}
-
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    {{ macros.form_builder(field_list[(session.role.lower())+"_details"], product) }}
+                {% endif %}
             </div>
             <!-- submit button -->
             <div class="row">
