--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} 
+{% import "macros.j2" as macros %}
 {% block content %} 
 
     <h3 class="center-align">Product Details</h3>
