--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -7,11 +7,25 @@
                 {% if (session.role.lower()) in product %}
                     {# check if the product object already has an attribute for the field and if it does, 
                         set it as the value for the element #}
-                    {% if field.field_name in product[(session.role.lower())] %}
-                        {% set value = product[(session.role.lower())][field.field_name] %}
-                    {% else %} 
-                        {% set value = "" %} 
+                    {% if context != None %} 
+                        {% if context in product[(session.role.lower())] %}
+                            {% if field.field_name in product[(session.role.lower())][context] %}
+                                {% set value = product[(session.role.lower())][context][field.field_name] %}
+                            {% else %}
+                                {% set value = "" %}
+                            {% endif %}
+                        {% else %} 
+                            {% set value = "" %}
+                        {% endif %}
+                    {% else %}
+                        {% if field.field_name in product[(session.role.lower())] %}
+                            {% set value = product[(session.role.lower())][field.field_name] %}
+                        {% else %} 
+                            {% set value = "" %} 
+                        {% endif %}
                     {% endif %}
+
+                    
                 {% else %} 
                     {% set value = "" %}
                 {% endif %}
