--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -101,3 +101,49 @@
 
     {% endfor %}
 {% endmacro %}
+
+{% macro view_builder(product_details, context=None) %}
+
+    {% for field, value in product_details %} 
+        {% if value is mapping and context == None %}
+
+            <div class="col s12">
+                <h5><strong><i>{{ field.replace("_", " ").title() }}</i></strong></h5>
+            </div>
+
+            {% for sub_field, sub_val in value.items() %} 
+
+                <div class="col s12 m6 row">
+                    <div class="col s4">
+                        <strong>{{ sub_field.replace("_", " ").title() }}</strong>
+                    </div>
+                    <div class="col s8">
+                        {% if sub_val is iterable and (sub_val is not string and sub_val is not mapping) %}
+                            {{ ", ".join(sub_val) }}
+                        {% else %}  
+                            {{ sub_val }}
+                        {% endif %} 
+                    </div>
+                </div>
+
+            {% endfor %}
+
+        {% elif value is not mapping and field != "_id" %} 
+            <div class="col s12 m6 row">
+                <div class="col s4">
+                    <strong>{{ field.replace("_", " ").title() }}</strong>
+                </div>
+                <div class="col s8">
+                    {% if value is iterable and (value is not string and value is not mapping) %}
+                        {{ ", ".join(value) }}
+                    {% else %}  
+                        {{ value }}
+                    {% endif %} 
+                </div>
+            </div>
+        {% endif %}
+        
+
+    {% endfor %}
+
+{% endmacro %}
