--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -10,28 +10,8 @@
 
         <div class="row" id="product-details">
             {# we cycle through the product dictionary #}
-            {% for field, value in product.items() %}
-                {# we don't want to display the id of the product from the database.
-                We also don't want to display if the value is mapping, ie an dictionary, 
-                because that means it's one of the roles details for the product which are 
-                displayed further down the page #}
-                {% if field != "_id" and value is not mapping %} 
-                    <div class="col s12 m6 row">
-                        <div class="col s4">
-                            <strong>{{ field.replace("_", " ").title() }}</strong>
-                        </div>
-                        <div class="col s8">
-                            {# check if value is list or string #}
-                            {% if value is iterable and (value is not string and value is not mapping) %}
-                                {{ ", ".join(value) }}
-                            {% else %}  
-                                {{ value }}
-                            {% endif %} 
-                        </div>
-                    </div>
-                {% endif %}
 
-            {% endfor %}
+            {{ macros.view_builder(product.items(), context="Commercial") }}
 
         </div>
 
