--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" media="print" href="{{ url_for('static', filename='css/print.css') }}">
     <title>Meade Product App</title>
 </head>
 <body>
