--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -97,6 +97,17 @@
                 <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
             </div>
 
+        {% elif field.field_type == "spec_grid" %}
+            <div class="col s12 row">
+                <table class="striped responsive-table">
+                    <thead>
+                        <tr>
+                            <th>Defect</th>
+                            <th>R/A/G</th>
+                            <th>Tolerance (%)</th>
+                            <th>Comments</th>
+                        </tr>
+                    </thead>
         {% endif %}
 
     {% endfor %}
