feat: create new macro to build tables

--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -237,3 +237,7 @@
     {% endfor %}
 
 {% endmacro %}
+
+{% macro table_builder(product_list, context=None) %}
+
+    <table class="highlight responsive-table">
