--- a/templates/macros.j2
+++ b/templates/macros.j2
@@ -267,3 +267,44 @@
             {% endif %}
 
         </thead>
+        <tbody>
+
+            {% if product_list %}
+                {# cycle through all products in products list #}
+                {% for product in product_list %}
+                    
+                    <tr class="{{ product.colour }}">
+                        {# iterate over the dict object of each project, get the field, value from each #}
+                        {% for field, value in product.items() %}
+                            {# we don't want the "_id" value displaying #}
+                            {% if field != "_id" and field != "created_on" and field != "new" and field != "colour" %}
+
+                                <td>{{ value }}</td>
+
+                            {% endif %}
+
+                        {% endfor %}
+                        {# at the end of each product row we create a link that will direct the user to the view_product view for the product #}
+                        <td>
+                            <a href="{{ url_for('view_product', product_id=product._id) }}" class="btn waves-effect green accent-3">
+                                <i class="material-icons right">format_list_bulleted</i> View Product
+                            </a>
+                        </td>
+                        {% if context == "pending" %}
+                            <td>
+                                <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn waves-effect blue accent-3">
+                                    <i class="material-icons right">edit</i> Add Details
+                                </a>
+                            </td>
+                        {% endif %}
+
+                    </tr>
+
+                {% endfor %}
+
+            {% endif %}
+
+        </tbody>
+    </table>
+
+{% endmacro %}
