--- a/templates/sign_off.html
+++ b/templates/sign_off.html
@@ -43,3 +43,8 @@
     
     <br>
 
+
+{% block scripts %} 
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
+    <script src="{{ url_for('static', filename='js/signature.js') }}"></script>
+{% endblock %}
