--- a/templates/sign_off.html
+++ b/templates/sign_off.html
@@ -43,7 +43,17 @@
     
     <br>
 
+    <h4 class="center-align"><i class="material-icons">edit</i> Sign Off</h4>
 
+    <form action="{{ url_for('sign_off', product_id=product._id) }}" method="post" id="signature-form">
+        <div class="card-panel">
+            <div class="row">
+                <div class="signature-pad-div col s12 m6 offset-m3">
+                    <canvas id="signature-pad"></canvas>
+                </div>
+            </div>
+        </div>
+    </form>
 {% block scripts %} 
     <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
     <script src="{{ url_for('static', filename='js/signature.js') }}"></script>
