--- a/templates/my_tasks.html
+++ b/templates/my_tasks.html
@@ -14,7 +14,12 @@
 
     <hr>
 
-    {{ macros.table_builder(products, context="pending") }}
+    {% if products|length %} 
+        {{ macros.table_builder(products, context="pending") }}
+    {% else %}
+        <h5 class="center-align"><strong>You're All Caught Up!</strong> <i class="material-icons">mood</i></h5>
+    {% endif %}
+    
 
 {% endblock %}
 {% block scripts %} 
