--- a/templates/customer_select.html
+++ b/templates/customer_select.html
@@ -12,7 +12,7 @@
                     <select name="customer" id="customer">
                         <!-- cycle over customers list to generate options -->
                         {% for customer in customers %} 
-                            <option value="{{ customer._id }}">{{ customer.customer_name }}</option>
+                            <option value="{{ customer.customer_name }}">{{ customer.customer_name }}</option>
                         {% endfor %}
                     </select>
                     <label for="customer">Customer</label>
