fix: change value to field list department instead of session department

--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -14,7 +14,7 @@
                 </div>
                 <!-- Disabled Department Input -->
                 <div class="input-field col s12 m6">
-                    <input type="text" class="validate" name="department" id="department" value="{{ session.department }}" disabled>
+                    <input type="text" class="validate" name="department" id="department" value="{{ field_list.department }}" disabled>
                     <label for="department">Department</label>
                 </div>
             </div><hr><br>
