--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -37,70 +37,39 @@
                 </div>
             </form>
 
-        {% endif %}
+        
 
-    {% endif %}
+        <!-- {% if session.role != "Commercial" and session.role != "Admin" %}
 
-    <hr>
-    
-    {% for role in roles %} 
-        {# We want to show the details for the roles that the user is not adding/editing currently #}
-        {% if role.role_name != session.role %} 
+            <div class="row" id="product-details">
 
-            <h4><i class="material-icons">card_giftcard</i> {{ role.role_name }} Details</h4>
+                {{ macros.view_builder(product.items(), context="Commercial") }}
 
-            {% if product[role.role_name.lower()] %} 
+            </div>
+        
+        {% else %}
 
+            <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
                 <div class="row">
-
-                    {{ macros.view_builder(product[role.role_name.lower()].items()) }}
-
-                </div>
-
-            {% else %} 
-
-                <h5 class="center-align">No {{ role.role_name }} Details Submitted Yet</h5>
-
-            {% endif %}
-
-            <hr>
-
-        {% endif %}
-
-    {% endfor %}
-
-    {% if session.role != "Commercial" and session.role != "Admin" %} 
-
-        <h4><i class="material-icons">card_giftcard</i> {{ session.role }} Details</h4>
-        <!-- create form element -->
-        <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
-            <div class="row">
-                {% if field_list[(session.role.lower())+"_details"] is mapping %} 
-                    {% for sub_heading, sub_array in field_list[(session.role.lower())+"_details"].items() %} 
-                        <div class="col s12">
-                            <h5><strong><i>{{ sub_heading.replace("_", " ").title() }}</i></strong></h5>
-                        </div>
-                        {{ macros.form_builder(sub_array, product, context=sub_heading) }}
-                        <div class="col s12">
-                            <hr>
-                        </div>
-                    {% endfor %}
-                {% else %}
+                    
                     {{ macros.form_builder(field_list[(session.role.lower())+"_details"], product) }}
-                {% endif %}
-            </div>
-            <!-- submit button -->
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button class="btn-large green accent-3 center-align">
-                        <i class="material-icons right">check</i> Submit
-                    </button>
+
+                </div> -->
+                <!-- submit button -->
+                <!-- <div class="row">
+                    <div class="col s12 center-align">
+                        <button class="btn-large green accent-3 center-align">
+                            <i class="material-icons right">check</i> Submit
+                        </button>
+                        <a href="{{ url_for('view_product', product_id=product._id) }}" class="btn-large red accent-3 center-align">
+                            <i class="material-icons right">cancel</i> Cancel
+                        </a>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+
+        {% endif %} -->
 
     {% endif %}
-    
-
 
 {% endblock %}
