--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -4,11 +4,9 @@
 
     <h3 class="center-align">Add Product <strong><i>{{ session.role }}</i></strong> Details</h3>
 
-    <h4><i class="material-icons">credit_card</i> Commercial Details</h4>
-
     {% if product %} 
 
-        {% if session.role != "Commercial" and session.role != "Admin" %}
+        <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
 
             <div class="row" id="product-details">
 
@@ -24,18 +22,18 @@
                     {{ macros.form_builder(field_list[(session.role.lower())+"_details"], product) }}
 
                 </div>
-                <!-- submit button -->
-                <div class="row">
-                    <div class="col s12 center-align">
-                        <button class="btn-large green accent-3 center-align">
-                            <i class="material-icons right">check</i> Submit
-                        </button>
-                        <a href="{{ url_for('view_product', product_id=product._id) }}" class="btn-large red accent-3 center-align">
-                            <i class="material-icons right">cancel</i> Cancel
-                        </a>
-                    </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn-large green accent-3 center-align">
+                        <i class="material-icons right">check</i> Submit
+                    </button>
+                    <a href="{{ url_for('view_product', product_id=product._id) }}" class="btn-large red accent-3 center-align">
+                        <i class="material-icons right">cancel</i> Cancel
+                    </a>
                 </div>
-            </form>
+            </div>
+
+        </form>
 
         
 
