--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -8,9 +8,11 @@
 
         <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
 
-            <div class="row" id="product-details">
+            {% for role in roles %}
 
-                {{ macros.view_builder(product.items(), context="Commercial") }}
+                <h4><i class="material-icons">{{ role.role_logo }}</i> {{ role.role_name }} Details</h4>
+
+                <div class="row">
 
             </div>
         
@@ -22,6 +24,11 @@
                     {{ macros.form_builder(field_list[(session.role.lower())+"_details"], product) }}
 
                 </div>
+
+                <hr>
+            
+            {% endfor %}
+
             <div class="row">
                 <div class="col s12 center-align">
                     <button class="btn-large green accent-3 center-align">
