--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -14,9 +14,25 @@
 
                 <div class="row">
 
-            </div>
-        
-        {% else %}
+                    {% if session.role in [role.role_name, "Admin"] %}
+
+                        {% if field_list[(role.role_name.lower())+"_details"] is mapping %} 
+                            {% for sub_heading, sub_array in field_list[(role.role_name.lower())+"_details"].items() %} 
+                                <div class="col s12">
+                                    <h5><strong><i>{{ sub_heading.replace("_", " ").title() }}</i></strong></h5>
+                                </div>
+                                {{ macros.form_builder(sub_array, product, context=sub_heading) }}
+                                <div class="col s12">
+                                    <hr>
+                                </div>
+                            {% endfor %}
+                        {% elif role.role_name == "Commercial" %} 
+                            {{ macros.form_builder(field_list[(role.role_name.lower())+"_details"], product, context="Commercial") }}
+                        {% else %}
+                            {{ macros.form_builder(field_list[(role.role_name.lower())+"_details"], product) }}
+                        {% endif %}
+                    
+                    {% else %}
 
             <form action="{{ url_for('add_product_details', product_id=product._id) }}" method="post">
                 <div class="row">
